--- a/Spender-Permission/base-permission-demo/package.json
+++ b/Spender-Permission/base-permission-demo/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-org/account": "^2.4.0",
     "@tailwindcss/vite": "^4.1.15",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.15"
+    "tailwindcss": "^4.1.15",
+    "viem": "^2.38.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
