add the readme for clarification

--- a/Spender-Permission/base-permission-demo/.env
+++ b/Spender-Permission/base-permission-demo/.env
@@ -1,1 +1,2 @@
 VITE_BACKEND_WALLET_ADDRESS=0x1D9093e522024bB486e01E7ec21AdBc7a2a62e85
+VITE_TOKEN_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
